# hrboost

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  LICENSE  Makefile  README.md  README_pypi.md  benchmark.py  best_params_optuna.json  build.sh  libbrstboost.dylib  optimizer.py  plot_decision_boundary.py  publish.sh  pyproject.toml  test_brst.py  test_hrboost.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
python/brstboost/: __init__.py  _lib.py  model.py
python/hrboost/: __init__.py  _lib.py  model.py
src/: bindings.cpp  brstboost.cpp  brstboost.h  capi.cpp  capi.h  capi_hrboost.cpp  capi_hrboost.h  hrboost.cpp  hrboost.h
