[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hrboost"
version = "0.1.0"
description = "HRBoost: Hierarchical Refined Boost - GBDT with Non-monotonic Bayesian Hierarchical Clustering"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.24",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
    "matplotlib>=3.7",
    "pandas>=2.0",
    "lightgbm",
    "xgboost",
    "catboost",
    "twine",
    "build"
]

[tool.setuptools.packages.find]
where = ["python"]
include = ["hrboost*"]

[tool.setuptools.package-data]
hrboost = ["*.dylib", "*.so"]
